# wikilite

./: .gitignore  README.md  pyproject.toml
docs/wikiextract/: README.md
notebooks/: test-1.ipynb
scratch/: example.py  import-wiktextract-en.py  import_wiki_en.py  word-sense-v1.py  word-sense-v2.py
src/wikilite/: __init__.py  __main__.py  app.py  base.py  database.py  example.py  importer.py  models.py  populate_db.py
src/wikilite/frontend/: app.py  debug.py  helpers.py  st_app.py
src/wikilite/frontend/assets/: template.html
src/wikilite/frontend/assets/css/: style.css
src/wikilite/utils/: wiktextract.py
